[package]
name = "visualize-yew"
version = "0.20.0-alpha.1"
edition = "2021"
description = "A simple data visualization library for Yew"
license = "MIT OR Apache-2.0"
license-file = "LICENSE-APACHE or LICENSE-MIT"
authors = ["Elon Aseneka <[elon@techietenka.com]>"]

[features]
default = ["BarChart"]
BarChart = []
PieChart = []
LineCurveChart = []
DoughnutChart = []


[dependencies]
yew = { version="0.20", features=["csr"] }
web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlDocument", "HtmlCanvasElement", "CanvasRenderingContext2d"]}
gloo = "0.11.0"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
no-deps = true
