[package]
name = "visualize-yew"
version = "0.20.11"
edition = "2021"
description = "A simple data visualization library for Yew"
license = "MIT OR Apache-2.0"
license-file = "LICENSE-APACHE"
authors = ["Elon Aseneka <[elon@techietenka.com]>"]
repository = "https://github.com/elonaire/visualize-yew"

[features]
default = ["BarChart"]
BarChart = []
PieChart = []
LineCurveChart = []
DoughnutChart = []


[dependencies]
yew = { version="0.20", features=["csr"] }
web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlDocument", "HtmlCanvasElement", "CanvasRenderingContext2d"]}
gloo = "0.11.0"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
no-deps = true
